# EMSim

./: .gitignore  1d_fdtd.py  1d_fdtd_dielectric.py  1d_fdtd_dielectric_pml.py  1d_fdtd_pml.py  1d_fdtd_simple.py  1d_fdtd_two_materials.py  2d_fdtd_simple.py  2d_fdtd_water.py  README.md  pyproject.toml
classes/: __init__.py  constants.py  fdtd.py
examples/: 1d_fdtd_dielectric.py  1d_fdtd_dielectric_pml.py  1d_fdtd_pml.py  1d_fdtd_simple.py  2d_fdtd_pml.py  2d_fdtd_simple.py  2d_fdtd_water.py
fdtd/: fdtd_engine.py  sources.py
