[tool.poetry]
name = "em-waves-simulations"
version = "0.1.0"
description = "Simulations of EM Waves"
authors = ["carguelloM <cnarguellomartinez@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.10.0"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
